syntax = "proto3";

package gitter;

option go_package = "./repository";

message CommitDetail {
    bytes hash = 1;
    bytes patch_id = 2;
    repeated string tags = 3;
}

// RepositoryCache is the minimally saved details for a repository
message RepositoryCache {
    repeated CommitDetail commits = 1;
}
